# Medical-Counselor

./: README.md
Audit-Module/IPFS-Chainlink-Monitor/: README.md
Audit-Module/chainlink-insurance/: README.md
DID-TBD-Ontology-modules/TBD-Medical-scaffolder/: .golangci.yml  CODEOWNERS  README.md  go.mod  renovate.json5  scaffolder.go  scaffolder_test.go
DID-TBD-Ontology-modules/did-ud-resolver/: package-lock.json  package.json
DID-TBD-Ontology-modules/pfi-aud-usd-tbdex/: .env.example  .gitignore  README.md  package-lock.json  package.json
DID-Trinsic-Biconomy-Modules/did-ssi-sdk-modules/: README.md
DID-Trinsic-Biconomy-Modules/trinsic-did-module/: .dockerignore  ConnectDemo.sln
DID-Trinsic-PolygonID-Modules/trinsic-did-module/: .gitignore  LICENSE  README.md
FVM-NFT-voting-Med-Counsel-DAOs/Med-Counseling-fvm-nft-nfc-tags/: README.md
FVM-NFT-voting-Med-Counsel-DAOs/NFT-voting-med-counsel-DAOs/: README.md
FVM-NFT-voting-Med-Counsel-DAOs/data-dao/: README.md
Medical-Fees-Lens/: README.md
Medical-Radiology-Data-transparency/fevm-bootstrap/: README.md
Medical-Radiology-Data-transparency/smart-contract-analytics-dao/: README.md
Near-Medical-License-NFT/Oort/: README.md
Near-Medical-License-NFT/gateway-mt/: README.md
dapp_suite/Theta-user-security/: README.md
hospital-DAO-astar/: README.md
hospital-DAO-astar/backend/contracts/project/: Cargo.toml  lib.rs
hospital-DAO-astar/backend/contracts/project/assignment/: Cargo.toml  lib.rs
hospital-DAO-astar/backend/contracts/project/employee/: Cargo.toml  lib.rs
medicaldao-ink-dapp/: README.md
(+288 files in other folders)
