[package]
name = "project"
version = "0.6.0"
authors = ["okAlice"]
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false } 
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
openbrush = { tag = "3.0.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["access_control", "reentrancy_guard", "psp34"] }

employee   = { path = "employee", default-features = false, features = ["ink-as-dependency"] }
assignment = { path = "assignment", default-features = false, features = [ "ink-as-dependency"]}

[lib]
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "employee/std",
    "assignment/std",
]
ink-as-dependency = []

[workspace]
members = [
    "assignment",
    "employee"
]
